// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameOverModal Renders an invisible GameOverModal by default 1`] = `
.c0 {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
}

.c1 {
  position: fixed;
  background: white;
  width: 50%;
  height: 50%;
  top: 40%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  padding: 5%;
  text-align: center;
}

.c2 {
  font-size: 5vw;
  text-align: center margin:48px 0px;
}

.c3 {
  margin: auto;
  text-align: center;
}

.c4 {
  display: block;
  margin: 20px auto auto auto;
  height: 40px;
  width: 50%;
  background-color: green;
  color: white;
  font-weight: 600;
  font-size: 20px;
  border: none;
  border-radius: 2px;
}

.c4:hover {
  background-color: darkseagreen;
}

<div
  className="c0"
>
  <section
    className="c1"
  >
    <div
      className="c2"
    >
      What a tired game
    </div>
    <div
      className="c3"
    >
      Unfortunate. Sad. Demeaning to watch...a game where neither player is smart enough to outdo the other.
    </div>
    <button
      className="c4"
      onClick={null}
    >
      Try again, you'll feel better
    </button>
  </section>
</div>
`;

exports[`GameOverModal Renders with a losing message 1`] = `
<Modal
  displayButton={true}
  displayModal={true}
  modalBody="Unfortunate. Sad. Demeaning to watch...a game where neither player is smart enough to outdo the other."
  modalHeader="What a tired game"
  onCloseModal={null}
/>
`;

exports[`GameOverModal Renders with a winning message 1`] = `
<Modal
  displayButton={true}
  displayModal={true}
  modalBody="With strategy, cunning, and ruthelessness,  has claimed absolute victory."
  modalHeader="Congratulations"
  onCloseModal={null}
/>
`;
